--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.10.2",
+    "body-parser": "^1.14.1",
     "bookshelf": "^0.8.2",
+    "checkit": "^0.5.1",
     "express": "^4.13.3",
     "knex": "^0.8.6",
+    "lodash": "^3.10.1",
     "pg": "^4.4.2"
   }
 }
