--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "checkit": "^0.5.1",
     "express": "^4.13.3",
     "knex": "^0.8.6",
+    "kue": "^0.9.6",
     "lodash": "^3.10.1",
     "mailgun": "^0.5.0",
     "pg": "^4.4.2"
